kubernetes/minuspod/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: minuspod

spec:
  selector:
    app.kubernetes.io/name: minuspod
    app.kubernetes.io/instance: minuspod
  ports:
  - name: http
    port: 8000
    targetPort: http
    protocol: TCP
